# EXE-Programs-Analyser

./: .editorconfig  .gitignore  Cargo.toml  README.md  README_DOWNLOAD.md  SECURITY.md  SECURITY_LAB_MODULES.md  Start Analyzer GUI.cmd  Start Analyzer GUI.vbs  build_portable.cmd  build_setup.cmd  release_artifacts.cmd
EXE_Analyzer/: README.md  SECURITY_PRECHECK.txt  SHA256SUMS.txt  Start Analyzer GUI.cmd
installer/: metsuki_installer.iss
scripts/: build_release.ps1  build_setup.ps1  pre_release_security_check.ps1  sign_artifacts.ps1
src/: core.rs  main.rs  preflight.rs  runtime_checks.rs  security_lab.rs
src without cargo/: main.rs
webui/: index.html
