[package]
name = "exe_tester"
version = "0.1.0"
edition = "2021"

[features]
default = []
libafl-engine = ["dep:libafl"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
goblin = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "ico"] }
notify = "8"
sysinfo = "0.37"
anyhow = "1"
thiserror = "2"
wry = "0.53"
tao = "0.34"
libafl = { version = "0.15", optional = true }
rfd = "0.15"

[[bin]]
name = "exe_tester"
path = "src/main.rs"

[[bin]]
name = "exe_tester_web_gui"
path = "src/bin/exe_tester_web_gui.rs"
